...
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message"
        app:layout_constraintVertical_bias="0.655" />

    <Button
        android:id="@+id/reply"
        android:layout_width="129dp"
        android:layout_height="51dp"
        android:text="Send"
        android:onClick="reply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
