<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/decreaseteam1"
                android:layout_width="@dimen/size"
                android:layout_height="@dimen/minus"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                style="@style/MinusButtons"
                android:onClick="decrease_score"
                />

            <ImageButton
                android:id="@+id/Increaseteam1"
                android:layout_width="@dimen/plus"
                android:layout_height="@dimen/hegiy"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:onClick="increase_score"
                style="@style/PlusButtons" />

            <TextView
                android:id="@+id/score_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                style="@style/TextAppearance.AppCompat.Headline"
                android:text="0"/>

            <TextView
                android:id="@+id/team1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                style="@style/TextAppearance.AppCompat.Headline"
                android:text="Team 1"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/decreaseteam2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentLeft="true"
                android:padding="5dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:onClick="decrease_score"
                style="@style/MinusButtons"/>

            <ImageButton
                android:id="@+id/Increaseteam2"
                android:layout_width="70dp"
                android:padding="5dp"
                android:layout_height="70dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:onClick="increase_score"
                style="@style/PlusButtons"/>

            <TextView
                android:id="@+id/score_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                style="@style/TextAppearance.AppCompat.Headline"
                android:text="0"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                style="@style/TextAppearance.AppCompat.Headline"
                android:text="Team 2"/>
        </RelativeLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>